2018-05-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/define.boot, src/interp/format.boot,
	src/interp/int-top.boot, src/interp/msgdb.boot:
	Misc cleanups

2018-05-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/clam.boot, src/interp/define.boot,
	src/interp/g-boot.boot, src/interp/nruncomp.boot:
	Simplify functor code

2018-05-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/clam.boot, src/interp/define.boot,
	src/interp/functor.boot, src/interp/i-output.boot,
	src/interp/nruncomp.boot: Misc cleanups

2018-05-12  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/boot/*, src/interp/*, src/algebra/files.spad,
	src/algebra/fortout.spad, src/algebra/table.spad:
	Regularize names

2018-05-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/alg_top.spad: Avoid duplication

2018-05-11  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/galfact.spad: Better use degree restrictions

2018-05-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fr.spad, src/algebra/galfact.spad,
	src/algebra/laurent.spad, src/interp/format.boot,
	src/interp/g-timer.boot, src/interp/postpar.boot:
	Minor cleanups and fixes

2018-05-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/gpresent.spad: Add convertion
	src/algebra/Makefile.in: Adjust

2018-05-04  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/evalut.spad, src/algebra/ffact.spad,
	src/algebra/float.spad, src/algebra/matfuns.spad,
	src/algebra/modhpsol.spad, src/algebra/numarr.spad,
	src/algebra/sf.spad, src/algebra/u32vec.spad,
	src/lisp/primitives.lisp: More regular names of primitives

2018-04-27  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/fspace.spad, src/algebra/rule.spad,
	src/interp/pf2sex.boot: Remove strange 'eval'

2018-04-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/ffhom.spad, src/algebra/wtpol.spad,
	src/algebra/xpoly.spad: Minor cleanups

2018-04-25  Qian Yun  <oldk1331@gmail.com>
