@@ -1,3 +1,8 @@
+2018-05-17  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
+	* src/interp/Makefile.in, src/interp/util.lisp:
+	Remove traces of autoloading interpreter
+
 2018-05-15  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
 	* src/interp/define.boot, src/interp/format.boot,
